消除编译警告