@@ -10,9 +10,8 @@ import org.bspfsystems.yamlconfiguration.configuration.MemoryConfiguration;
 import org.bspfsystems.yamlconfiguration.file.YamlConfiguration;
 
 import java.io.File;
-import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URL;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
@@ -73,8 +72,8 @@ public final class MainConfigUpdateScript {
             if (host.startsWith("172.")) {
                 try {
                     log.info("Updating endpoint for downloader {} for Synology DSM package upgrade from {} to {}.", key, endpoint, downloaderSection.getString("endpoint"));
-                    downloaderSection.set("endpoint", new URL(uri.getScheme(), "127.0.0.1", uri.getPort(), uri.getPath()).toString());
-                } catch (MalformedURLException e) {
+                    downloaderSection.set("endpoint", (new URI(uri.getScheme(), null, "127.0.0.1", uri.getPort(), uri.getPath(), null, null)).toString());
+                } catch (URISyntaxException e) {
                     log.error("Unable to update endpoint for downloader {} on Synology DSM: {}", key, e.getMessage());
                     Sentry.captureException(e);
                 }
